[gd_scene load_steps=9 format=2]

[ext_resource path="res://my_ps_character/body.png" type="Texture" id=1]
[ext_resource path="res://my_ps_character/short.png" type="Texture" id=2]
[ext_resource path="res://my_ps_character/t-shirt.png" type="Texture" id=3]
[ext_resource path="res://my_ps_character/shoes.png" type="Texture" id=4]
[ext_resource path="res://my_ps_character/hair.png" type="Texture" id=5]
[ext_resource path="res://CharacterEditor.gd" type="Script" id=6]
[ext_resource path="res://black.tres" type="Theme" id=7]
[ext_resource path="res://characterbuttons.tres" type="ButtonGroup" id=8]

[node name="CharacterEditor" type="Node2D"]
script = ExtResource( 6 )

[node name="Container" type="Panel" parent="."]
margin_left = 1.99658
margin_top = 8.98984
margin_right = 972.997
margin_bottom = 643.99
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="Sprite" parent="Container"]
position = Vector2( 113.744, 193.521 )
scale = Vector2( 4.91667, 5.21622 )
texture = ExtResource( 1 )

[node name="Tshirt" type="Sprite" parent="Container/Base"]
texture = ExtResource( 3 )

[node name="Short" type="Sprite" parent="Container/Base"]
texture = ExtResource( 2 )

[node name="Shoes" type="Sprite" parent="Container/Base"]
texture = ExtResource( 4 )

[node name="Hair" type="Sprite" parent="Container/Base"]
texture = ExtResource( 5 )

[node name="Panel" type="Panel" parent="Container"]
margin_left = 439.0
margin_top = 86.0
margin_right = 840.0
margin_bottom = 510.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="Container/Panel"]
margin_left = 20.3865
margin_top = -18.9994
margin_right = 625.387
margin_bottom = 568.001
rect_scale = Vector2( 0.640001, 0.769504 )
color = Color( 0.498039, 0.109804, 0.109804, 1 )
edit_alpha = false
deferred_mode = true
presets_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="Container"]
margin_left = 690.949
margin_top = 542.74
margin_right = 857.95
margin_bottom = 609.74
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeButtonsContainer" type="VBoxContainer" parent="Container"]
margin_left = 213.0
margin_top = 104.0
margin_right = 385.0
margin_bottom = 414.0
grow_horizontal = 2
size_flags_horizontal = 15
size_flags_stretch_ratio = 4.66
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hair" type="Button" parent="Container/ChangeButtonsContainer"]
margin_right = 172.0
margin_bottom = 40.0
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 8 )
text = "Hair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tshirt" type="Button" parent="Container/ChangeButtonsContainer"]
margin_top = 70.0
margin_right = 172.0
margin_bottom = 110.0
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 8 )
text = "Tshirt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Short" type="Button" parent="Container/ChangeButtonsContainer"]
margin_top = 140.0
margin_right = 172.0
margin_bottom = 180.0
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 8 )
text = "Short"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shoes" type="Button" parent="Container/ChangeButtonsContainer"]
margin_top = 210.0
margin_right = 172.0
margin_bottom = 250.0
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 8 )
text = "Shoes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="TextEdit" parent="."]
margin_left = 269.0
margin_top = 568.0
margin_right = 435.0
margin_bottom = 587.0
rect_scale = Vector2( 2.45097, 2.02965 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 160.611
margin_top = 570.128
margin_right = 202.611
margin_bottom = 584.128
rect_scale = Vector2( 2.31037, 2.7192 )
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="color_changed" from="Container/Panel/ColorPicker" to="." method="on_color_change"]
[connection signal="pressed" from="Container/SaveButton" to="." method="_on_SaveButton_pressed"]
